# get-cookies

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  event.json  pyproject.toml  template.yaml
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql-analysis.yml  dependabot.yml  pipeline.yml  terraform.yml  tfsec.yml
.kiro/steering/: behavior.md
get_cookies/: authenticator.py  converter.py  handler.py  signer.py
src/: .coverage  .env  Dockerfile  UnauthorizedError.js  UnexpectedError.js  app.js  betterthanboto.py  event.json  index.js  lambda_function.py  package-lock.json  package.json  pyproject.toml  requirements.txt  signed_cookie_generator.py  testHandler.js
src/get_cookies/: authenticator.py  converter.py  handler.py  lambda_function.py  signer.py
src/tests/: __init__.py  conftest.py  test_authenticator.py  test_authenticator_jwks.py  test_get_cookies.py  test_handler.py  test_signer.py
src/tests/jwks_tests/: conftest.py  test_authenticator.py
terraform/: api_gateway.tf  cloudflare_ips.tf  cloudwatch.tf  cognito.tf  iam.tf  kms.tf  lambda.tf  outputs.tf  providers.tf  route53.tf  secrets.tf  secrets.yaml.encrypted  ssm.tf  state.tf  terraform.tfvars  variables.tf
tests/: conftest.py  event.json  private.pem  test_authenticator.py  test_authenticator_jwks.py  test_converter.py  test_handler.py  test_signer.py
