[tool.poetry]
name = "get_cookies"
version = "0.1.0"
description = ""
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^43"
PyJWT = "^2.10"
requests = "^2"
validators = "^0.35"
urllib3 = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
boto3 = "^1.38.18"
botocore = "^1.38.19"
moto = "^5.1"
requests-mock = "^1.12"
pytest-cov = "^6.1"

[tool.pytest.ini_options]
# https://github.com/boto/boto3/issues/3889
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
